# instructions

./: Dockerfile  Makefile  manage.py  pyproject.toml
home/migrations/: 0003_homepage_body.py
instructions/: wsgi.py
instructions/settings/: base.py  dev.py
instructions/templates/: base.html
