[tool.poetry]
name = "instructions"
version = "0.1.0"
description = ""
authors = ["Oscar Barlow <oscar-barlow@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
wagtail = ">=6.4,<6.5"
django = ">=5.1,<5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
